changed labels on order#edit form, fixed route on product show for see more from merchant

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -6,10 +6,10 @@
     <%= f.text_field :customer_email %>
     <%= f.label :credit_card %>
     <%= f.text_field :credit_card %>
-    <%= f.label :cvv %>
+    <%= f.label :cvv, "CVV" %>
     <%= f.text_field :cvv %>
-    <%= f.label :cc_expiration %>
-    <%= f.text_field :cc_expiration %>
+    <%= f.label :cc_expiration, "Credit Card Expiration"  %>
+    <%= f.text_field :cc_expiration%>
     <%= f.label :shipping_address %>
     <%= f.text_field :shipping_address %>
     <%= f.label :billing_address %>
