--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
       <%= f.submit 'Add to Cart' %>
     <% end %>
 
-    <%= link_to "See More from this merchant", merchant_path(product.merchant_id) %>
+    <%= link_to "See More from this merchant", merchant_path(@product.merchant_id) %>
   </section>
 
   <section class='reviews'>
