--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -3,7 +3,7 @@
     <div>
       <p><%= item.product.name %></p>
       <p><%= number_to_currency(item.product.price) %><p>
-      <%= form_for item, url: orderitem_path, method: :patch do |f| %>
+      <%= form_for item, url: orderitem_path(item), method: :patch do |f| %>
         <%= f.label :quantity %>
         <%= f.select :quantity, (1..item.product.stock).to_a, :selected => item.quantity %>
         <%= f.submit "Update #{item.product.name} Quantity" %>
