added in text to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,8 @@
     </main>
 
     <footer>
-      Footer
+      <p>Copyright, The Three Marketeers, 2018</p>
+      <h4>It's a shop.. it's a store.. It's a SUPERSTORE!</h4>
     </footer>
   </body>
 </html>
