--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <div class="right">
             <%= form_tag search_path, class: 'form-inline', method: :get do %>
             <%= text_field_tag :search, params[:search], class: 'search-bar', placeholder: 'Search...'%>
-            <%= submit_tag :search, class: 'search-bar-button'%>
+            <%= submit_tag 'Search', class: 'search-bar button'%>
             <% end %>
             <div class="login">
               <% if @logged_merchant %>
