--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,22 +19,25 @@
   <section class='reviews'>
     <h4>Product Reviews</h4>
 
-    <div class="review-form">
-      <h6>Add a new review</h6>
-      <%= form_for :review, url: reviews_path do |f| %>
-      <%= f.hidden_field :product_id, value: @product.id %>
-      <%= f.label :rating %>
-      <%= f.select :rating, (1..5).to_a %>
-      <%= f.label :description %>
-      <%= f.text_area :description %>
-      <%= f.submit 'Submit Review' %>
+    <% if @logged_merchant %>
+      <% unless @logged_merchant.id == @product.merchant_id %>
+        <div class="review-form">
+          <h6>Add a new review</h6>
+          <%= form_for :review, url: reviews_path do |f| %>
+          <%= f.hidden_field :product_id, value: @product.id %>
+          <%= f.label :rating %>
+          <%= f.select :rating, (1..5).to_a %>
+          <%= f.label :description %>
+          <%= f.text_area :description %>
+          <%= f.submit 'Submit Review' %>
+          <% end %>
+        </div>
       <% end %>
-    </div>
+    <% end %>
 
-    <% unless @logged_merchant.id == @product.merchant_id %>
+
       <div class="existing-reviews">
         <% product_reviews = Review.where(product_id: @product) %>
-
         <ul>
           <% product_reviews.each do |review| %>
           <li>
@@ -47,7 +50,6 @@
           <% end %>
         </ul>
       </div>
-    <% end %>
   </section>
 
 </article>
