--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+section.banner {
+  height: 100vh;
+  background: #000 url('banner_background.png');
+  background-position: center;
+  background-size: cover;
+  // background-attachment: fixed;
+}
