--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,21 @@
   <h3><%= @category.name.capitalize %></h3>
 <% end %>
 
+<section class="banner">
+
+</section>
+
+<aside class="left-nav">
+  <h3>Categories</h3>
+  <div class="nav-categories">
+    <% Category.categories_with_works.each do |category| %>
+    <div class="category-name">
+      <%= link_to category.name.capitalize, category_path(category.name) %>
+    </div>
+    <% end %>
+  </div>
+</aside>
+
 <section class='all-products'>
   <% @products.each do |product| %>
   <div class="card" style="width: 300px;">
