--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -1,16 +1,20 @@
+<h3>Your Cart</h3>
+
  <section>
    <% @order.order_items.each do |item| %>
-    <div>
-      <p><%= item.product.name %></p>
-      <p><%= number_to_currency(item.product.price) %><p>
+    <div class='order-item'>
+      <%= image_tag item.product.photo_url, class: 'viewcart-photo'%>
+      <span><%= item.product.name %></span>
+      <span><%= number_to_currency(item.product.price) %></span>
       <%= form_for item, url: orderitem_path(item), method: :patch do |f| %>
-        <%= f.label :quantity %>
-        <%= f.select :quantity, (1..item.product.stock).to_a, :selected => item.quantity %>
-        <%= f.submit "Update #{item.product.name} Quantity" %>
+        <%= f.select :quantity, (1..item.product.stock).to_a, :selected => item.quantity, class: 'dropdown' %>
+        <%= f.submit "Update Quantity", class: 'viewcart-item button small' %>
       <% end %>
-      <%= link_to "Remove Item", orderitem_path(item), method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.product.name}?"} %>
+      <%= link_to "Remove Item", orderitem_path(item), method: :delete, class: 'viewcart-item', data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.product.name}?"} %>
     </div>
   <% end %>
-  <%= link_to "Checkout", edit_order_path(@order) %>
+
+  <h5 class='subtotal'>Subtotal: <%= number_to_currency(@order.order_total) %></h5>
+  <p><%= link_to "Checkout", edit_order_path(@order), class: 'checkout button' %></p>
 
  </section>
