--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
       <%= f.label :quantity %>
       <%= f.select :quantity, (1..@product.stock).to_a, :selected => 1 %>
       <%= f.hidden_field :product_id, :value => @product.id%>
-      <%= f.submit 'Add to Cart' %>
+      <%= f.submit 'Add to Cart', class: 'button' %>
     <% end %>
 
     <%= link_to "See More from this merchant", merchant_path(@product.merchant_id) %>
@@ -28,7 +28,7 @@
         <%= f.select :rating, (1..5).to_a %>
         <%= f.label :description %>
         <%= f.text_area :description %>
-        <%= f.submit 'Submit Review' %>
+        <%= f.submit 'Submit Review', class: 'button' %>
         <% end %>
       </div>
     <% end %>
