--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,10 @@
 
  */
 
+* {
+  font-family: 'Comic Sans MS', sans-serif;
+}
+
 html {
   height: 100%;
 }
@@ -34,6 +38,17 @@ body {
 header {
   grid-column: 1 / span 2;
   z-index: 1;
+}
+
+nav.top-bar {
+  background-color: #00ACEE;
+}
+
+nav.top-bar .button, .hollow {
+  color: #FFEE1D;
+  font-size: 1em;
+  border: solid 2px #FFEE1D;
+  margin: 10px 5px;
 }
 
 .navbar {
@@ -63,9 +78,13 @@ header {
 
 .login {
   padding-right: 2vw;
-  margin-right: 2vw;
-  border-right: 1px solid rgb(168, 168, 168);
 }
+
+.cart {
+  border-left: solid 2px #FFEE1D;
+  padding-left: 2vw;
+}
+
 main {
   grid-row: 2 / span 1;
   grid-column: 1 / span 2;
@@ -129,4 +148,13 @@ footer {
 }
 .search-bar-button {
   width: 80px;
+}
+
+input[name="search"] {
+  border: none;
+  margin: 15px 10px;
+}
+
+input[name="search"]::placeholder {
+  color: #000;
 }
