--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 section.banner {
   height: 100vh;
-  background: #000 url('banner_background.png');
-  background-position: center;
-  background-size: cover;
-  // background-attachment: fixed;
+  background: pink;
+  background-image: radial-gradient(dodgerblue 20%, transparent 0), radial-gradient(dodgerblue 20%, transparent 0);
+  background-size: 30px 30px;
+  background-position: 0 0, 15px 15px;
 }
