--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,29 +17,31 @@
       <div class="sticky">
         <nav class="top-bar" data-topbar role="navigation">
           <div class="left">
-            <%= link_to 'Home', root_path, class: 'navbar-item' %>
-            <%= link_to 'All Products', products_path, class: 'navbar-item' %>
-            <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
+            <%= link_to 'Home', root_path, class: 'navbar-item button hollow' %>
+            <%= link_to 'All Products', products_path, class: 'navbar-item button hollow' %>
+            <%= link_to 'All Merchants', merchants_path, class: 'navbar-item button hollow' %>
             <% if session[:merchant_id] %>
-            <%= link_to 'Dashboard', orders_path, class: 'navbar-item' %>
+            <%= link_to 'Dashboard', orders_path, class: 'navbar-item button hollow' %>
             <% end %>
           </div>
           <div class="right">
             <%= form_tag search_path, class: 'form-inline', method: :get do %>
             <%= text_field_tag :search, params[:search], class: 'search-bar', placeholder: 'Search...'%>
-            <%= submit_tag :search, class: 'search-bar-button'%>
+            <%= submit_tag :search, class: 'search-bar-button button hollow '%>
             <% end %>
             <div class="login">
               <% if @logged_merchant %>
-              Logged in as: <%= @logged_merchant.username %>
-              <%= link_to "Log Out", logout_path, method: :delete %>
+              Logged in as <%= @logged_merchant.username %>
+              <%= link_to "Log Out", logout_path, method: :delete, class: 'button hollow' %>
               <% else %>
-              <%= link_to "Log in with Google", '/auth/google_oauth2' %>
+              <%= link_to "Log in with Google", '/auth/google_oauth2', class: 'button hollow' %>
               <% end %>
             </div>
-            <% if session[:cart_id] %>
-            <%= link_to 'Cart', viewcart_path(session[:cart_id]) %>
-            <% end %>
+            <div class="cart">
+              <% if session[:cart_id] %>
+              <%= link_to 'Cart', viewcart_path(session[:cart_id]), class: 'button hollow' %>
+              <% end %>
+            </div>
           </div>
         </nav>
       </div>
