--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,7 +71,15 @@ main {
 footer {
   grid-row-start: 3;
   grid-column: 1 / span 2;
-  
+  background-color: rgb(255, 232, 10)
+}
+
+footer .copyright {
+  display: inline;
+}
+
+footer .slogan {
+  display: inline;
 }
 
 /* reviews */
