--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,8 +69,9 @@
     </main>
 
     <footer>
-      <p>Copyright, The Three Marketeers, 2018</p>
-      <h4>It's a shop.. it's a store.. It's a SUPERSTORE!</h4>
+      <p class='copyright'>Copyright, The Three Marketeers, 2018</p>
+      <h4 class='slogan'>It's a shop.. it's a store.. It's a SUPERSTORE!</h4>
     </footer>
   </body>
 </html>
+s
