--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,13 +11,60 @@ section.banner {
   background-size: 100px 100px;
   background-color: #00ACEE;
   text-align: center;
+  grid-row: 1 / span 2;
 }
 
 section.banner h1 {
   z-index: 2;
   font-size: 10em;
   padding-top: 200px;
-  font-family: 'Bangers', cursive;
   color: #EC173A;
   text-shadow: 2px 2px 4px #000000;
+}
+
+/* product cards */
+
+.all-products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  grid-row: 1 / span 1;
+  grid-column: 2 / span 1;
+}
+
+.all-products > .card {
+  margin: 5px;
+  width: 300px;
+  height: 400px;
+  border: solid 3px black;
+  background: #FFEE1D;
+  background-image:
+    radial-gradient(#00ACEE 20%, transparent 0),
+    radial-gradient(#00ACEE 20%, transparent 0);
+  background-size: 30px 30px;
+  background-position: 0 0, 15px 15px;
+}
+
+
+.all-products > .card img {
+  display: block;
+  margin: auto;
+  max-width: 300px;
+  height: 350px;
+}
+
+.card-content {
+  position: relative;
+  bottom: 0;
+  background: #EC173A;
+  text-align: center;
+  border-top: solid 3px black;
+}
+
+.card-content .content h5 a {
+  font-family: 'Bangers', 'Comic Sans MS', sans-serif;
+  color: #00ACEE;
+  text-shadow: 1px 1px 4px #000000;
+  font-size: 1.2em;
 }
