--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,33 +6,39 @@
   <h1>SuperMarket</h1>
 </section>
 
-<aside class="left-nav">
-  <h3>Categories</h3>
-  <div class="nav-categories">
-    <% Category.categories_with_works.each do |category| %>
-    <div class="category-name">
-      <%= link_to category.name.capitalize, category_path(category.name) %>
+<section class="products-content">
+  <aside class="left-nav">
+    <h3>Categories</h3>
+    <div class="nav-categories">
+      <% Category.categories_with_works.each do |category| %>
+      <div class="category-name">
+        <%= link_to category.name.capitalize, category_path(category.name) %>
+      </div>
+      <% end %>
     </div>
-    <% end %>
-  </div>
-</aside>
+  </aside>
 
-<section class='all-products'>
-  <% @products.each do |product| %>
-  <div class="card" style="width: 300px;">
-    <div class="card-image">
-      <%= link_to image_tag(product.photo_url, alt: product.name, width: 350, height: 350), product_path(product.id) %>
-    </div>
-    <div class="card-content">
-      <div class="content">
-        <h5>
-          <%= link_to product.name, product_path(product.id) %>
-          <small> by <%= link_to product.merchant.username, merchant_path(product.merchant_id)%> </small>
-        </h5>
+  <section class='all-products'>
 
+    <% @products.each do |product| %>
+    <div class="card">
+      <div class="card-image">
+        <%= link_to image_tag(product.photo_url, alt: product.name), product_path(product.id) %>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h5>
+            <%= link_to product.name, product_path(product.id) %>
+          </h5>
+          <h5>
+            <small> by <%= link_to product.merchant.username, merchant_path(product.merchant_id)%> </small>
+          </h5>
+
+        </div>
       </div>
     </div>
-  </div>
-  <% end %>
+    <% end %>
 
-</section>
+  </section><!-- all-products -->
+
+</section> <!-- products-content -->
