--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,16 @@
             <%= link_to 'Home', root_path, class: 'navbar-item' %>
             <%= link_to 'All Products', products_path, class: 'navbar-item' %>
             <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
+
+
+            <!-- <div class="has-dropdown">
+              <%= link_to 'All Products', products_path, class: 'navbar-item' %>
+              <% Category.categories_with_works.each do |category| %>
+                <ul class="dropdown">
+                  <li><%= link_to category.name.capitalize, category_path(category.name) %></li>
+                </ul>
+              <% end %>
+            </div> -->
             <% if session[:merchant_id] %>
             <%= link_to 'Dashboard', orders_path, class: 'navbar-item' %>
             <% end %>
