--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,7 +1,11 @@
-<% @merchants.each do |merchant| %>
-  <div class="card" style="width: 300px;">
-    <div class="card-content">
-      <%= link_to merchant.username, merchant_path(merchant) %>
+<h3 class="merchant">Merchants</h3>
+
+<section class="merchants">
+  <% @merchants.each do |merchant| %>
+  <div class="merchant-card" style="width: 300px;">
+    <div class="merchant-content">
+      <h5><%= link_to merchant.username, merchant_path(merchant) %></h5>
     </div>
   </div>
-<% end %>
+  <% end %>
+</section>
