--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,7 +3,7 @@
 
   <p>
   <h3 class="orders-title">Orders Overview</h3>
-  <%= link_to 'Manage My Products', merchant_manage_products_path(@merchant), class: 'button body-button', id: 'manage-products-button' %>
+  <%= link_to 'Manage My Products', merchant_manage_products_path(@merchant), class: 'button body-button manage-products-button' %>
   <section class="table">
     <table>
       <tr>
