--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,11 +191,11 @@ footer h4 {
   color: #FFEE1D;
 }
 
-#manage-products-button {
+.manage-products-button {
   float: right;
 }
 
-.orders-title {
+.orders-title, .products-title {
   display: inline;
   margin: 50px auto;
 }
@@ -214,6 +214,6 @@ h3 {
 }
 
 .by-status {
-  margin-top: 30px; 
+  margin-top: 30px;
   width: 200px;
 }
