--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ nav.top-bar {
   background-color: #00ACEE;
 }
 
-nav.top-bar .button, .hollow {
+nav.top-bar .button, .hollow, nav.top-bar .dropbtn {
   color: #FFEE1D;
   font-size: 1em;
   border: solid 2px #FFEE1D;
@@ -56,6 +56,73 @@ nav.top-bar .button, .hollow {
   z-index: 10;
   position: absolute;
 }
+
+.left {
+  display: flex;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  color: white;
+  padding: 10px 16px 10px 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/*.dropbtn:hover {
+
+}*/
+
+/* The container <div> - needed to position the dropdown content */
+.has-dropdown {
+  margin-top: 3vh;
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  left: -1rem;
+  top: 2.2rem;
+}
+
+/* Links inside the dropdown */
+.dropdown a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  color: white;
+  border: 1px solid white;
+}
+
+/* Show the dropdown menu on hover */
+.has-dropdown:hover .dropdown {
+  display: block;
+  background-color: #EC173A
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.has-dropdown:hover .dropbtn {
+    /*background-color: #3e8e41;*/
+    background-color: #00ACEE;
+    color: #FFEE1D;
+}
+.dropdown li {
+  list-style-type: none;
+
+
+}
+
+
 
 .right {
   display: flex;
