--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ nav.top-bar .button, .hollow, nav.top-bar .dropbtn {
 
 .navbar {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   width: 100vw;
   z-index: 10;
   position: absolute;
