--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -5,7 +5,8 @@
 <% if @products.empty? %>
   <h5>This merchant has no items at this time</h5>
 <% else %>
-  <% @products.each do |product| %>
+  <section class="all-products">
+    <% @products.each do |product| %>
     <div class="card" style="width: 300px;">
       <div class="card-image">
         <%= link_to image_tag(product.photo_url, alt: product.name, width: 350, height: 350), product_path(product.id) %>
@@ -20,5 +21,7 @@
         </div>
       </div>
     </div>
-  <% end %>
+    <% end %>
+
+  </section>
 <% end %>
