updated no products message

--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -4,7 +4,7 @@
 
   <section class='all-products'>
     <% if @products.empty? %>
-      <p>There are no products here at this time</p>
+      <p>There are no products available at this time</p>
     <% else %>
       <% @products.each do |product| %>
       <div class="card">
